--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:14-alpine
     container_name: qscrap-postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: qscrap_db
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:?DB_PASSWORD is required}
+      POSTGRES_DB: ${DB_NAME:-qscrap_db}
     ports:
       - "5432:5432"
     volumes:
@@ -19,14 +19,15 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=${NODE_ENV:-development}
       - PORT=3000
       - DB_HOST=postgres
       - DB_PORT=5432
-      - DB_USER=postgres
-      - DB_PASSWORD=password
-      - DB_NAME=qscrap_db
-      - JWT_SECRET=supersecretkey
+      - DB_USER=${DB_USER:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:?DB_PASSWORD is required}
+      - DB_NAME=${DB_NAME:-qscrap_db}
+      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET is required}
+      - OCR_SPACE_API_KEY=${OCR_SPACE_API_KEY:-}
     volumes:
       - .:/app:cached
       - node_modules:/app/node_modules
