--- a/driver-mobile/app.json
+++ b/driver-mobile/app.json
@@ -2,15 +2,15 @@
     "expo": {
         "name": "QScrap Driver",
         "slug": "qscrap-driver",
-        "version": "1.0.0",
+        "version": "1.0.1",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
-        "userInterfaceStyle": "automatic",
+        "userInterfaceStyle": "light",
         "newArchEnabled": true,
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
-            "backgroundColor": "#0f172a"
+            "backgroundColor": "#8D1B3D"
         },
         "assetBundlePatterns": [
             "**/*"
@@ -30,7 +30,7 @@
         "android": {
             "adaptiveIcon": {
                 "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#0f172a"
+                "backgroundColor": "#8D1B3D"
             },
             "package": "com.qscrap.driver",
             "permissions": [
@@ -55,7 +55,7 @@
                 "expo-notifications",
                 {
                     "icon": "./assets/notification-icon.png",
-                    "color": "#f59e0b"
+                    "color": "#C9A227"
                 }
             ]
         ],
