--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "lint": "eslint src --ext .ts --max-warnings 0",
+    "lint:fix": "eslint src --ext .ts --fix",
     "db:reset": "node reset-and-seed.js",
     "db:migrate": "node scripts/migrate.js"
   },
@@ -23,7 +25,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.5",
     "@types/sharp": "^0.31.1",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.2",
     "compression": "^1.8.1",
@@ -68,6 +70,9 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
+    "eslint": "^9.39.2",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "supertest": "^7.2.2",
