--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
-    "@stripe/stripe-react-native": "0.50.3",
+    "@stripe/stripe-react-native": "0.58.0",
     "expo": "~54.0.30",
     "expo-av": "~16.0.8",
     "expo-build-properties": "~1.0.10",
@@ -43,7 +43,7 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.30.0",
     "react-native-image-viewing": "^0.2.2",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "1.27.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
