--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@types/express-session": "^1.18.2",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.5",
-    "@types/sharp": "^0.32.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.2",
@@ -42,7 +41,7 @@
     "kysely": "^0.28.9",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
-    "node-fetch": "^2.7.0",
+    "node-fetch": "3.3.2",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.1",
     "puppeteer": "^24.33.0",
@@ -53,12 +52,11 @@
     "stripe": "^20.2.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^9.0.1",
+    "uuid": "13.0.0",
     "zod": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
