fix: resolve CI/Security failures + mobile i18n improvements
CI Fixes:
- Use npm run db:migrate instead of manual migrations in test bootstrap
- Ensures proper migration order (users table created before refresh_tokens)

Security Fixes:
- Add apk upgrade to Dockerfile for latest OpenSSL patches (3.3.6-r0)
- Fixes CVE-2025-15467, CVE-2025-69419, CVE-2025-69421
- Add .trivyignore to suppress Stripe test key false positives

Mobile i18n:
- Add missing AUTH.GETSTARTED key (en: 'Get Started', ar: 'ابدأ الآن')
- Add errors.requestNotFound and related error keys
- Change photo label from 'Photos (Optional)' to 'Part Photos (Optional)'
- Arabic: 'الصور (اختياري)' → 'صور القطعة (اختياري)'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,11 +101,7 @@ jobs:
           fi
 
       - name: Bootstrap test database schema
-        run: |
-          psql -h localhost -p 5432 -U postgres -d qscrap_test -v ON_ERROR_STOP=1 -f src/config/database.sql
-          psql -h localhost -p 5432 -U postgres -d qscrap_test -v ON_ERROR_STOP=1 -f src/config/migrations/20260208_refresh_tokens.sql
-          psql -h localhost -p 5432 -U postgres -d qscrap_test -v ON_ERROR_STOP=1 -f src/config/migrations/20260215_schema_alignment_push_tokens_part_subcategory.sql
-          psql -h localhost -p 5432 -U postgres -d qscrap_test -v ON_ERROR_STOP=1 -c "INSERT INTO subscription_plans (plan_code, plan_name, plan_name_ar, monthly_fee, commission_rate, max_bids_per_month, features, display_order) VALUES ('starter','Starter',NULL,199.00,0.180,30,'{}'::jsonb,1),('professional','Professional',NULL,499.00,0.150,NULL,'{}'::jsonb,2),('enterprise','Enterprise',NULL,999.00,0.120,NULL,'{}'::jsonb,3) ON CONFLICT (plan_code) DO NOTHING;"
+        run: npm run db:migrate
         env:
           PGPASSWORD: testpassword
           DB_HOST: localhost
