--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -73,6 +73,7 @@ jobs:
           ignore-unfixed: true
           vuln-type: 'os,library'
           severity: 'CRITICAL,HIGH'
+          trivyignores: '.trivyignore'
 
       - name: Generate SBOM
         uses: aquasecurity/trivy-action@0.28.0
