--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bullmq": "^5.66.2",
     "compression": "^1.8.1",
     "connect-redis": "^9.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jest": "^30.0.0",
